ike- hora ike- hra-